# apex-rs

./: .dockerignore  .env.template  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  importer_redis.sh  server.sh  template.env
migrations/2020-04-29-154051_initial/: down.sql  up.sql
migrations/2020-05-14-150236_update_documents_index/: up.sql
migrations/2020-05-15-152936_add_config_table/: up.sql
migrations/2020-05-15-213849_add_objects_table/: down.sql  up.sql
migrations/2020-06-10-091703_add_document_metadata/: down.sql  up.sql
migrations/2020-06-16-072554_rework_property_index/: up.sql
migrations/2020-09-29-160141_add_language_partitioning/: up.sql
src/: app_config.rs  db_context.rs  delta.rs  delta_processor.rs  delta_stream.rs  document.rs  errors.rs  events.rs  hashtuple.rs  importer.rs  kafka.rs  lib.rs  main.rs  models.rs  properties.rs  reporter.rs  resources.rs  schema.rs  types.rs
src/db/: cache_control.rs  db_context.rs  document.rs  hpf.rs  mod.rs  models.rs  properties.rs  resources.rs  schema.rs  uu128.rs
src/delta/: delta_processor.rs  mod.rs  processor.rs
src/delta/processors/: add_processor.rs  invalidate_processor.rs  mod.rs  replace_processor.rs  supplant_processor.rs
src/importing/: delta_processor.rs  importer.rs  kafka.rs  mod.rs  parsing.rs  redis.rs  redis_invalidator.rs
src/rdf/: iri_utils.rs  mod.rs
src/reporting/: metrics.rs  mod.rs  prometheus.rs  prometheus_exporter.rs  prometheus_u64.rs  reporter.rs  stdout.rs
src/serving/: assets.rs  bulk.rs  bulk_ctx.rs  health.rs  hpf.rs  metrics.rs  mod.rs  reporter.rs  request_headers.rs  response_type.rs  responses.rs  route.rs  serialization.rs  server.rs  service_info.rs  sessions.rs  show_resource.rs  timings.rs  ua.rs  update.rs  welcome.rs
src/writing/: mod.rs  ndjson_serializer.rs
static/: index.html
