[package]
name = "apex-rs"
version = "0.1.0"
authors = ["Fletcher91 <thom@argu.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "2.0.0"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "uuidv07"] }
dotenv = "0.15.0"
env_logger = "0.7"
error-chain = "0.12.2"
log = "0.4.8"
rdkafka = { version = "0.23.1", features = ["cmake-build", "ssl", "gssapi"] }
tokio = { version = "0.2.19", features = ["full"] }
futures = "0.3.4"
futures-util = "0.3.4"
percent-encoding = "2.1.0"
redis = { version = "0.16.0", features = ["tokio-rt-core"] }
rio_api = "0.4.0"
rio_turtle = "0.4.0"
serde = "1.0.106"
serde_derive = "1.0.106"
serde_json = "1.0"
serde_qs = "0.5"
uuid = { version = "0.7", features = ["serde", "v4"] }
time = "0.2.10"
bimap = "0.4.0"
fasthash = "0.4.0"
humantime = "2.0.0"
